--- a/Crypto/appsettings.json
+++ b/Crypto/appsettings.json
@@ -5,7 +5,7 @@
       {
         "Name": "File",
 				"Args": {
-					"path": "log/sampleplugin.log",
+					"path": "log/CryptoPlugin.log",
 					"rollingInterval": "Day",
 					"outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] {Message} {NewLine}{Exception}"
 				}
